--- a/partials/apps-browser.html
+++ b/partials/apps-browser.html
@@ -1,7 +1,8 @@
-<div id="appsContainer" class="container" style="overflow: hidden; display:flex; flex-direction: column; position: absolute; top:0px; bottom: 0px; left: 0px; right: 0px; padding: 10px;">
+<div id="appsContainer" class="container">
     <table>
         <tr ng-repeat="app in apps">
             <td>{{app[1]}}</td>
+            <td>{{app[23]}}
         </tr>
     </table>
 </div>
