--- a/partials/apps-browser.html
+++ b/partials/apps-browser.html
@@ -2,7 +2,9 @@
     <table>
         <tr ng-repeat="app in apps">
             <td>{{app[1]}}</td>
-            <td>{{app[23]}}
+            <td>{{app[23]}}</td>
+            <td>{{app[12]}}</td>
+            <td>{{app[22]}}</td>
         </tr>
     </table>
 </div>
